// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`languages works with C 1`] = `
Array [
  Object {
    "assignee": "JasonEtco",
    "body": "###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`@todo\` comment in f7d286aa6381bbb5045288496403d9427b0746e2. It's been assigned to @JasonEtco because they committed the code.

<!-- probot = {\\"10000\\":{\\"title\\":\\"Check that C works\\",\\"file\\":\\"c.c\\",\\"author\\":\\"JasonEtco\\",\\"sha\\":\\"f7d286aa6381bbb5045288496403d9427b0746e2\\"}} -->",
    "labels": Array [
      "todo",
    ],
    "number": undefined,
    "owner": "JasonEtco",
    "repo": "test",
    "title": "Check that C works",
  },
]
`;

exports[`languages works with C# 1`] = `
Array [
  Object {
    "assignee": "JasonEtco",
    "body": "###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`@todo\` comment in f7d286aa6381bbb5045288496403d9427b0746e2. It's been assigned to @JasonEtco because they committed the code.

<!-- probot = {\\"10000\\":{\\"title\\":\\"Check that C# works\\",\\"file\\":\\"c-sharp.cs\\",\\"author\\":\\"JasonEtco\\",\\"sha\\":\\"f7d286aa6381bbb5045288496403d9427b0746e2\\"}} -->",
    "labels": Array [
      "todo",
    ],
    "number": undefined,
    "owner": "JasonEtco",
    "repo": "test",
    "title": "Check that C# works",
  },
]
`;

exports[`languages works with Go 1`] = `
Array [
  Object {
    "assignee": "JasonEtco",
    "body": "###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`@todo\` comment in f7d286aa6381bbb5045288496403d9427b0746e2. It's been assigned to @JasonEtco because they committed the code.

<!-- probot = {\\"10000\\":{\\"title\\":\\"Check that Go works\\",\\"file\\":\\"go.go\\",\\"author\\":\\"JasonEtco\\",\\"sha\\":\\"f7d286aa6381bbb5045288496403d9427b0746e2\\"}} -->",
    "labels": Array [
      "todo",
    ],
    "number": undefined,
    "owner": "JasonEtco",
    "repo": "test",
    "title": "Check that Go works",
  },
]
`;

exports[`languages works with Ruby 1`] = `
Array [
  Object {
    "assignee": "JasonEtco",
    "body": "###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`@todo\` comment in f7d286aa6381bbb5045288496403d9427b0746e2. It's been assigned to @JasonEtco because they committed the code.

<!-- probot = {\\"10000\\":{\\"title\\":\\"Check that Ruby works\\",\\"file\\":\\"ruby.rb\\",\\"author\\":\\"JasonEtco\\",\\"sha\\":\\"f7d286aa6381bbb5045288496403d9427b0746e2\\"}} -->",
    "labels": Array [
      "todo",
    ],
    "number": undefined,
    "owner": "JasonEtco",
    "repo": "test",
    "title": "Check that Ruby works",
  },
]
`;
